--- a/lispro06/ch5/5-3.md
+++ b/lispro06/ch5/5-3.md
@@ -72,3 +72,17 @@
 #eq? 연산은 단순히 레지스터의 모든 영역이 같은지 검사한다.
 # 이와 달리 pair?, null?, symbol?, number? 같은 술어는 타입 필드를 검사하기만 하면 된다.
 ~~~~
+
+### 스택구현
+
+~~~~
+(assign the-stack (op cons) (reg <reg>) (reg the-stack))
+
+(assign <reg> (op car) (reg the-stack))
+(assign the-stack (op cdr) (reg the-stack))
+
+(perform (op initialize-stack))
+# |||||||||||||||||||||||||
+# vvvvvvvvvvvvvvvvvvvvvvvvv
+(assign the-stack (const ()))
+#스택에 값을 넣고 빼내는 것은 벡터 인덱스의 증가 또는 감소로 표현할 수 있다.
