--- a/lispro06/ch5/5-3.md
+++ b/lispro06/ch5/5-3.md
@@ -86,3 +86,96 @@
 # vvvvvvvvvvvvvvvvvvvvvvvvv
 (assign the-stack (const ()))
 #스택에 값을 넣고 빼내는 것은 벡터 인덱스의 증가 또는 감소로 표현할 수 있다.
+
+
+ ## 5.3.2  무한히 많은 메모리인 양 보이기
+ 
+# 일반적인 계산으로  만든 쌍의 대부분은 오로지 중간 결과로만 사용한다.
+# 결과를 얻고 나면, 쌍은 이제 쓸모가 없어진다. 이러한 것을 쓰레기garbage라 한다.
+
+# (accumulate + 0 (filter odd? (enumerate-interval 0 n)))
+
+# 정기적으로 쓰레기를 전부 모아 처리할 수 있고,  이것이 새로운 쌍을 만드는 것
+# 과 같은 비율로 메모리를 다시 만들어 쓸 수 있도록 비운다면, 메모리를 한없이
+# 쓰는 것과 다름없다.
+# 이 방법으로 쓰레기를 처리하는 방법을 메모리 재활용garbage collection 이라 한다.
+
+### stop-and-copy 메모리 재활용기 memory collector 만들기
+
+# 기본 주소는 the-cars, the-cdrs라는 레지스터에 있다.
+# 비워둔 메모리에 대한 것은 new-cars, new-cdrs라는 레지스터에 있다.
+
+# 쌍은 free에서 가리키는 위치, 즉 비워둔 메모리에 만들어 질 것이다.
+# 따라서 이전의 작업 메모리는 다음번 재활용에서 비워둔 메모리로 쓸 수 있게 된다.
+# car 위치에는 이미 옮긴 물체라는 신호로 특별한 꼬리표를 붙인다(그런 물체는 예전부터 broken heart라 불렀다)
+#  마지막에는 scan 포인터가 free 포인터를 따라잡으면서 재활용 과정이 종료된다. 
+
+~~~~
+begin-garbage-collection
+(assign free (const 0)) 
+(assign scan (const 0)) 
+(assign old (reg root)) 
+(assign relocate-continue (label reassign-root)) 
+(goto (label relocate-old-result-in-new)) 
+reassign-root
+(assign  root (reg new)) 
+(goto (label gc-1oop))
+
+gc-1oop
+(test  (op  =)  (reg  scan)  (reg  free) ) 
+(branch  (label  gc-flip) ) 
+(assign  old (op vector-ref)  (reg  new-cars)  (reg  scan) ) 
+(assign  relocate-continue ( label  update-car) ) 
+(goto (label  relocate-old-result-in-new) ) 
+
+update-car 
+(perform
+(op  vector-set !  (reg  new-cars)  (reg  scan)  (reg  new) ) 
+(assign  old (op  vector-ref) (reg  new-cdrs)  (reg  scan) ) 
+(assign  relocate-continue (label  update-cdr) ) 
+(goto (label  relocate-old-result-in-new) ) 
+update-cdr 
+(perform
+(op  vector-set ! )   (reg  new-cdrs)  (reg  scan)  (reg  new) ) 
+(assign  scan  (op +)  (reg  scan)  (const 1 ) ) 
+(goto (label  gc-1oop) )
+
+
+
+~~~~
+relocate-old-result-in-new
+(test  (op pointer-to-pair?} (reg  old} }
+(branch  ( label  pair} } 
+(assign  new  (reg  old} }
+(goto (reg  relocate-continue} }
+pair 
+(assign  oldcr (op  vector-ref} (reg  the-cars)  (reg  old) )
+(test  (op broken-heart?} (reg  older} ) 
+(branch  ( label  already-moved} }
+(assign  new  (reg  free} }  ;  쌍을 위한 새로운 장소를 지정한다. 
+; ;   free  포인터를 갱신한다. 
+(assign  free  (op + )   (reg  free)  (const  1) ) 
+; ;   car과 cdr를  새로운 메모리로 복사한다. 
+(perform  (op vector-set !  ) 
+(reg  new-cars)  (reg  new)  (reg  oldcr) )
+(assign  oldcr (op vector-ref)  (reg  the-cdrs)  (reg  old} }
+(perform (op  vector-set ! )  
+(reg  new-cdrs)  (reg  new)  (reg  oldcr) )
+; ;  broken heart의  구성 
+(perform  (op vector-set ! ) 
+(reg  the-cars)  (reg  old)  (const broken-heart} }
+(perform 
+(op  vector-set ! ) (reg  the-cdrs)  (reg  old) (reg  new) } 
+(goto (reg  relocate-continue) )
+already-moved
+(assign  new  (op vector-ref)  (reg  the-cdrs)  (reg  old} }
+(goto (reg  relocate-continue) }
+
+
+gc-flip 
+(assign  temp  (reg  the-cdrs) )  
+(assign  the-cdrs  (reg  new-cdrs) ) 
+(assign  new-cdrs  (reg  temp) ) 
+(assign  temp  (reg  the-cars) )  
+(assign  the-cars  (reg  new-cars) )  
+(assign  new-cars  (reg  temp) ) 
