--- a/lispro06/ch5/5-3.md
+++ b/lispro06/ch5/5-3.md
@@ -22,7 +22,7 @@
 
 
 (vector-ref v 5) #벡터 v에서 다섯 번째 값 가져오기
-(vector-ref v 5 7) #벡터 v의 다섯 번째 요소에 7 할당
+(vector-set! v 5 7) #벡터 v의 다섯 번째 요소에 7 할당
 ~~~~
 컴퓨터 메모리에서 주소 계산은 벡터의 시작 위치인 바닥주소(bace address)와 위치 데이터 요소의 오프셋(offset)으로 인덱스 사용  
 
