--- a/lispro06/ch5/5.5.3.md
+++ b/lispro06/ch5/5.5.3.md
@@ -1,7 +1,10 @@
 # 5.5.3 조합 식 번역하기
- 프로시저 호출 번역  
+ ## 프로시저 호출 번역
+ 
  <연산자를 반복한다. 타깃은 proc이고 연결은 next이다.>
+ 
  <피연산자를 계산(eval)하고 arg1에 피연산자의 리스트를 만든다>
+ 
  <지정된 타깃과 연결로 프로시저 호출을 번역한다.>
  
 ```scheme
@@ -17,16 +20,24 @@
       (compile-procedure-call target linkage)))))
 ```
 
-<마지막 피연산자를 번역하여 val 에 저장한다.>
+<마지막 피연산자를 번역하여 val 에 저장한다.> 
+```scheme
     (assign arg1 (op list) (reg val))
+```
 <그 앞의 피연산자를 번역하여 val에 저장한다.>
+```scheme
     (assign arg1 (op cons) (reg val) (reg arg1))
     ...
+```
 <마지막 피연산자를 번역하여 val에 저장한다.>
+```scheme
     (assign arg1 (op cons) (reg val) (reg arg1))
+```
     
 피연산자가 없다면, 명령은 다음과 같다
+```scheme
     (assign arg1 (const ()))
+```
     
 그렇지 않다면 compile-application이 제공하는 순서에 따라 피연산자 명령줄 리스트를 뒤집어야 한다.
 
@@ -61,3 +72,127 @@
          code-for-next-arg
          (code-to-get-rest-args (cdr operand-codes))))))
 ```
+
+
+ ## 프로시저 호출하기
+ 
+ <연산자를 반복한다. 타깃은 proc이고 연결은 next이다.>
+ 
+ ```
+  (test (op primitive-procedure?) (reg proc))
+ (branch (label primitive-branch))
+compiled-branch
+ <번역된 프로시저를 지정된 타깃과 알맞는 연결로 적용할 코드>
+primitive-branch
+ (assign <target>
+         (op apply-primitive-procedure)
+         (reg proc)
+         (reg argl))
+ <linkage>
+after-call
+```
+
+복합 브랜치는 기본 브랜치 다음에 까울 라벨로 건너뛰는 연결을 사용해야 한다.
+
+```
+(define (compile-procedure-call target linkage)
+  (let ((primitive-branch (make-label 'primitive-branch))
+        (compiled-branch (make-label 'compiled-branch))
+        (after-call (make-label 'after-call)))
+    (let ((compiled-linkage
+           (if (eq? linkage 'next) after-call linkage)))
+      (append-instruction-sequences
+       (make-instruction-sequence '(proc) '()
+        `((test (op primitive-procedure?) (reg proc))
+          (branch (label ,primitive-branch))))
+       (parallel-instruction-sequences
+        (append-instruction-sequences
+         compiled-branch
+         (compile-proc-appl target compiled-linkage))
+        (append-instruction-sequences
+         primitive-branch
+         (end-with-linkage linkage
+          (make-instruction-sequence '(proc argl)
+                                     (list target)
+           `((assign ,target
+                     (op apply-primitive-procedure)
+                     (reg proc)
+                     (reg argl)))))))
+       after-call))))
+```
+
+compile-if 에서 참 경우 브랜치와 거짓 경우 브랜치가 그랬듯이 기본 브랜치와 복합 브랜치는 원래 append-instruction-sequence를 쓰지 않고 parallel-instruction-sequence를 써서 연결한다. 이것들이 순차적으로 실행되지 않기 때문이다.
+
+ ## 번역된 프로시저 적용하기
+ 
+ ```
+  (assign continue (label proc-return))
+ (assign val (op compiled-procedure-entry) (reg proc))
+ (goto (reg val))
+proc-return
+ (assign <target> (reg val))   ; included if target is not val
+ (goto (label <linkage>))   ; linkage code
+```
+ 
+ 또는 연결이 return 이라면 아래와 같다.
+ 
+ ```
+  (save continue)
+ (assign continue (label proc-return))
+ (assign val (op compiled-procedure-entry) (reg proc))
+ (goto (reg val))
+proc-return
+ (assign <target> (reg val))   ; included if target is not val
+ (restore continue)
+ (goto (reg continue))   ; linkage code
+```
+
+이 코드는 프로시저가 라벨 proc-return 으로 돌아가 프로시저의 진입 지점으로 점프하도록 continue를 설정한다.
+
+
+<연결하도록 continue 를 설정한다.>
+(assign val (op compiled-procedure-entry) (reg proc))
+(goto (reg val))
+
+연결이 라벨이라면, 프로시저가 그 라벨로 돌아가도록 continue를 설정해야 한다.
+
+(assign continue (label <linkage>))
+(assign val (op compiled-procedure-entry) (reg proc))
+(goto (reg val))
+
+연결이 return 이라면 전혀 continue를 둘 필요가 없다.
+
+(assign val (op compiled-procedure-entry) (reg proc))
+(goto (reg val))
+
+return 연결을 이렇게 구현하면, 번역기는 꼬리에서만 되돌이 하는 코드를 만든다.
+
+
+compile-proc-appl은 부르는 타깃이 val인지 아닌지, 연결이 return인지 아닌지 등 네 가지 경우를 고려해 위에서 살펴본 프로시저 계산 코드를 나타낸다. 명령줄이 모든 레지스터를 고칠 수 있다고 선언된다. 프로시저 실행 중에 임의의 레지스터를 고칠 수 있다고 선언된다. 프로시저 실행 중에 임의의 레지스터를 변경할 수 있기 때문이다.
+
+(define (compile-proc-appl target linkage)
+  (cond ((and (eq? target 'val) (not (eq? linkage 'return)))
+         (make-instruction-sequence '(proc) all-regs
+           `((assign continue (label ,linkage))
+             (assign val (op compiled-procedure-entry)
+                         (reg proc))
+             (goto (reg val)))))
+        ((and (not (eq? target 'val))
+              (not (eq? linkage 'return)))
+         (let ((proc-return (make-label 'proc-return)))
+           (make-instruction-sequence '(proc) all-regs
+            `((assign continue (label ,proc-return))
+              (assign val (op compiled-procedure-entry)
+                          (reg proc))
+              (goto (reg val))
+              ,proc-return
+              (assign ,target (reg val))
+              (goto (label ,linkage))))))
+        ((and (eq? target 'val) (eq? linkage 'return))
+         (make-instruction-sequence '(proc continue) all-regs
+          '((assign val (op compiled-procedure-entry)
+                        (reg proc))
+            (goto (reg val)))))
+        ((and (not (eq? target 'val)) (eq? linkage 'return))
+         (error "return linkage, target not val -- COMPILE"
+                target))))
