--- a/lispro06/ch5/5.5.3.md
+++ b/lispro06/ch5/5.5.3.md
@@ -93,7 +93,7 @@ primitive-branch
 after-call
 ```
 
-복합 브랜치는 기본 브랜치 다음에 까울 라벨로 건너뛰는 연결을 사용해야 한다.
+복합 브랜치는 기본 브랜치 다음에 끼울 라벨로 건너뛰는 연결을 사용해야 한다.
 
 ```
 (define (compile-procedure-call target linkage)
