--- a/lispro06/ch5/5.5.4.md
+++ b/lispro06/ch5/5.5.4.md
@@ -19,7 +19,7 @@
 ```
 기본적인 조합기는 append-instruction-sequences다.
 명령줄은 append-2-sequences에 의해 한 번에 두 개씩 연결된다.
-집합 연산에 따라서, 필요한 레지스터의 새 집합은 합집합으로 나타낼 수 있다. 이 합집합의 요소는 seq1에서 필요한 레지스터 집합, 그리고 seq2에서 필요한 레지스터의 집합에서 seq1이 고칮 레지스터 집합을 뺀 차집합니다.
+집합 연산에 따라서, 필요한 레지스터의 새 집합은 합집합으로 나타낼 수 있다. 이 합집합의 요소는 seq1에서 필요한 레지스터 집합, 그리고 seq2에서 필요한 레지스터의 집합에서 seq1이 고친 레지스터 집합을 뺀 차집합이다.
 ```
 (define (append-instruction-sequences . seqs)
   (define (append-2-sequences seq1 seq2)
@@ -52,6 +52,8 @@
 
 preserving은 두번째로 중요한 조합기다. preserving은 레지스터 리스트 regs와, 명령줄 seq1과 seq2를 인자로 받아 하나의 명령줄을 결과고 돌려준다.
 seq1 앞 뒤에서 seq1이 고쳤지만 seq2에서 필요한 regs 레지스터를 save와 restore 명령을 사용해 보호한다.
+
+preserving 이 세 인자를 받아서 append를 호출한다는 것에 유념하라. 이 책에서는 append가 두 인자만 받아 처리하도록 만들어져 있지만, Scheme은 임의의 인자를 받는 append 프로시저를 표준으로 제공한다.
 
 ```
 (define (preserving regs seq1 seq2)
